# ComfyUI_SD3_Flowedit

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: example_SD3_SD3.5_Flowedit.json
nodes/: flowedit_nodes.py  model_pred_node.py
